[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "mediapipe==0.9.1.0",  # Use a compatible version for Streamlit Cloud
    "numpy>=1.26.4",
    "opencv-python-headless>=4.11.0.86",  # Avoid OpenGL issues
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.39",
    "streamlit>=1.44.0",
]
